# my_django_boilerplate

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
complete_auth/templates/account/: login.html
project_settings/: .env  settings.py
